--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#ef2b2d</color>
     <color name="colorPrimaryDark">#002868</color>
     <color name="colorPrimaryBackground">#ffffff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#002868</color>
 </resources>
