--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -6,23 +6,38 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <!-- Main content -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <!-- ActionBar -->
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <!-- Main content -->
         <FrameLayout
             android:id="@+id/feedContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </FrameLayout>
+    </LinearLayout>
 
         <!-- Navigation Drawer -->
-    <ListView
+    <android.support.design.widget.NavigationView
         android:id="@+id/navList"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="@android:color/white" />
+        android:background="@android:color/white"
+        app:menu="@menu/navigation_drawer"
+        app:headerLayout="@layout/nav_header"/>
 
     </android.support.v4.widget.DrawerLayout>
 
