--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/rCard" />
+        app:srcCompat="@drawable/r_card" />
 
 
 </android.support.constraint.ConstraintLayout>
