--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -21,6 +21,7 @@
     <!-- Main content -->
         <FrameLayout
             android:id="@+id/feedContent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </FrameLayout>
