--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content" />
 
     <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/circularImageView"
+        android:id="@+id/userProfilePicture"
         android:layout_width="127dp"
         android:layout_height="125dp"
         android:layout_marginEnd="92dp"
@@ -30,7 +30,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/userName"
+        style="@android:style/Widget.AutoCompleteTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -38,10 +39,11 @@
         android:layout_marginTop="136dp"
         android:ems="10"
         android:inputType="none"
+        android:editable="false"
         android:text="John Smith"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.615"
-        app:layout_constraintStart_toEndOf="@+id/circularImageView"
+        app:layout_constraintStart_toEndOf="@+id/userProfilePicture"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
@@ -62,7 +64,7 @@
     </ScrollView>
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/russCard"
         android:layout_width="366dp"
         android:layout_height="175dp"
         android:layout_marginBottom="8dp"
@@ -73,7 +75,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/circularImageView"
+        app:layout_constraintTop_toBottomOf="@+id/userProfilePicture"
         app:layout_constraintVertical_bias="0.491"
         app:srcCompat="@drawable/r_card" />
 
