--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#002868</color>
     <color name="colorPrimaryBackground">#ffffff</color>
     <color name="colorAccent">#002868</color>
+    <color name="colorShadow"></color>
 </resources>
