--- a/app/src/main/res/drawable/circular_button.xml
+++ b/app/src/main/res/drawable/circular_button.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
+    android:onClick="buttonClicked"
+    >
     <corners
         android:radius="100dp"
         />
@@ -20,4 +23,6 @@
         android:width="3dp"
         android:color="#878787"
         />
+
+
 </shape>
