--- a/app/src/main/res/layout/activity_knot.xml
+++ b/app/src/main/res/layout/activity_knot.xml
@@ -34,6 +34,26 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
 
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/circular_button"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="+"
+        android:textColor="#000000"
+        android:textSize="60sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/add_witness_text_view" />
+
+    <Button
+        android:id="@+id/add_witness_button2"
+
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+
         android:layout_marginEnd="100dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/circular_button"
@@ -45,27 +65,6 @@
         android:textColor="#000000"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/add_witness_text_view" />
-
-    <Button
-        android:id="@+id/add_witness_button2"
-
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/circular_button"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="+"
-        android:textColor="#000000"
-        android:textSize="60sp"
-        app:layout_constraintEnd_toStartOf="@+id/add_witness_button1"
-        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_witness_text_view" />
 
