--- a/app/src/main/res/layout/scoreboard_user_row.xml
+++ b/app/src/main/res/layout/scoreboard_user_row.xml
@@ -34,8 +34,9 @@
         android:id="@+id/rvUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/userProfilePicture"
+        android:maxLines="1"
         android:textSize="24sp" />
 
     <TextView
