Login talks with server

--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -36,6 +36,7 @@
     <!-- Navigation Drawer -->
     <android.support.design.widget.NavigationView
         android:id="@+id/navList"
+        app:itemTextColor="@color/colorPrimaryDark"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
