--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -2,17 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/scoreboard"
+        android:checked="false"
         android:title="@string/scoreboard" />
     <item
         android:id="@+id/profile"
+        android:checked="false"
         android:title="@string/profile"/>
     <item
         android:id="@+id/settings"
-        android:title="@string/settings"/>
+        android:actionLayout="@color/colorPrimaryDark"
+        android:checkable="false"
+        android:checked="false"
+        android:title="@string/settings" />
     <item
         android:id="@+id/knotList"
+        android:checkable="false"
         android:title="@string/knotList"/>
     <item
         android:id="@+id/logout"
+        android:checkable="false"
         android:title="@string/logout"/>
 </menu>
