--- a/app/src/main/res/layout/knot_list_knot_row.xml
+++ b/app/src/main/res/layout/knot_list_knot_row.xml
@@ -18,7 +18,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="11dp"
-        android:src="@drawable/default_user"
+        android:src="@drawable/knot"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
