--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/loginParent">
 
     <!-- ActionBar -->
     <include
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content" />
 
     <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/userProfilePicture"
+        android:id="@+id/logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginEnd="92dp"
