--- a/app/src/main/res/layout/scoreboard_user_row.xml
+++ b/app/src/main/res/layout/scoreboard_user_row.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rvScoreboardLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,8 +18,8 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="11dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="58dp"
         android:src="@drawable/default_user"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
@@ -27,20 +28,31 @@
         app:civ_shadow_radius="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.043"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/rvPosition"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/rvPosition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="17dp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="5dp"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/rvUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginStart="12dp"
         android:layout_toEndOf="@+id/userProfilePicture"
         android:maxLines="1"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        tools:text="jghugjy" />
 
     <TextView
-        android:id="@+id/rvPosition"
+        android:id="@+id/rvPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
