--- a/app/src/main/res/layout/scoreboard_user_row.xml
+++ b/app/src/main/res/layout/scoreboard_user_row.xml
@@ -17,9 +17,9 @@
         android:id="@+id/userProfilePicture"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="58dp"
+        android:layout_marginStart="19dp"
+        android:layout_toEndOf="@+id/rvPosition"
         android:src="@drawable/default_user"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
@@ -35,10 +35,11 @@
         android:id="@+id/rvPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="17dp"
-        android:layout_marginLeft="35dp"
-        android:layout_marginTop="5dp"
-        android:textSize="30sp" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true"
+
+        android:layout_marginStart="16dp"
+        android:textSize="30sp"/>
 
     <TextView
         android:id="@+id/rvUser"
@@ -48,8 +49,7 @@
         android:layout_marginStart="12dp"
         android:layout_toEndOf="@+id/userProfilePicture"
         android:maxLines="1"
-        android:textSize="24sp"
-        tools:text="jghugjy" />
+        android:textSize="24sp"/>
 
     <TextView
         android:id="@+id/rvPoints"
